--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push Multi-Architecture Docker Images
+name: Build and Push Multi-Arch Docker Image
 
 on:
   push:
@@ -6,39 +6,38 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        architecture: [amd64, arm/v7]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    # Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    # Set up QEMU for cross-compilation
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: all
 
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ matrix.architecture }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+    # Set up Docker Buildx
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # Log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image for ${{ matrix.architecture }}
-        run: |
-          docker buildx create --use
-          docker buildx build \
-            --platform linux/${{ matrix.architecture }} \
-            -t chandanghosh/unbound-docker:latest \
-            -f Dockerfile . \
-            --push
-
+    # Build and push the multi-arch image
+    - name: Build and Push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        push: true
+        tags: |
+          chandanghosh/unbound-docker:latest
 
