--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,6 +13,11 @@ jobs:
     # Checkout code
     - name: Checkout code
       uses: actions/checkout@v3
+    
+    # Read version from VERSION file
+    - name: Read VERSION
+      id: version
+      run: echo "version=$(cat VERSION)" >> $GITHUB_ENV
 
     # Set up QEMU for cross-compilation
     - name: Set up QEMU
@@ -39,5 +44,6 @@ jobs:
         platforms: linux/amd64,linux/arm64,linux/arm/v7
         push: true
         tags: |
+          chandanghosh/unbound-docker:${{ env.version }}
           chandanghosh/unbound-docker:latest
 
