--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -47,3 +47,17 @@ jobs:
           chandanghosh/unbound-docker:${{ env.version }}
           chandanghosh/unbound-docker:latest
 
+    # Create a GitHub release
+    - name: Create GitHub Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ env.version }}
+        release_name: Release v${{ env.version }}
+        draft: false
+        prerelease: false
+        body: |
+          ## Changes in this release
+          - Built and pushed Docker image for version `chandanghosh/unbound-docker:${{ env.version }}`
+
