DoT config added

--- a/a-records.conf
+++ b/a-records.conf
@@ -1,11 +1,7 @@
 server:
   # Your internal network name and addresses go here
-  private-domain: "box"
-  domain-insecure: "box"
-  local-zone: "box" transparent
-  local-data: "fw.box IN A 10.27.27.1"
-  local-data-ptr: "10.27.27.1 fw.box"
-  local-data: "pihole.box IN A 10.27.27.27"
-  local-data-ptr: "10.27.27.27 pihole.box"
-  local-data: "cattle.box IN A 10.27.27.40"
-  local-data-ptr: "10.27.27.40 cattle.box"
+  # private-domain: "box"
+  # domain-insecure: "box"
+  # local-zone: "box" transparent
+  # local-data: "fw.box IN A 10.27.27.1"
+  # local-data-ptr: "10.27.27.1 fw.box"
