--- a/unbound.conf
+++ b/unbound.conf
@@ -10,11 +10,10 @@ server:
   log-servfail: yes
   use-syslog: no
   logfile: ""
-  use-syslog: no
   log-time-ascii: yes
 
 
-  num-threads: 2
+  num-threads: 4
   interface: 0.0.0.0
   interface: ::0
   port: 53
@@ -53,6 +52,7 @@ server:
   access-control: 172.16.0.0/12 allow
   access-control: 10.0.0.0/8 allow
   access-control: fc80::/7 allow
+  access-control: 172::/7 allow
   access-control: ::1/128 allow
 
 
@@ -78,6 +78,7 @@ server:
   private-address: fd00::/8
   private-address: fe80::/10
   private-address: ::ffff:0:0/96
+  private-address: 172::/8
 
   unwanted-reply-threshold: 10000000
   do-not-query-address: 127.0.0.1/8
@@ -104,6 +105,9 @@ server:
   key-cache-size: 20m
   key-cache-slabs: 4
   neg-cache-size: 1m
+
+  # Enable TLS
+  tls-cert-bundle: "/etc/ssl/certs/ca-certificates.crt"
 
   include: "/etc/unbound/unbound_ad_servers"
   include: "/etc/unbound/a-records.conf"
