--- a/forward-records.conf
+++ b/forward-records.conf
@@ -1,8 +1,7 @@
 forward-zone:
   name: "."
-  forward-addr: 8.8.4.4        # Google
-  # forward-addr: 8.8.8.8        # Google
-  # forward-addr: 208.67.222.220 # OpenDNS
-  # forward-addr: 208.67.222.222 # OpenDNS
-  forward-addr: 1.1.1.1        # CloudFlare
-  forward-first: yes
+  forward-tls-upstream: yes
+  forward-addr: 1.1.1.3@853#family.cloudflare-dns.com
+  forward-addr: 1.0.0.3@853#family.cloudflare-dns.com
+  forward-addr: 2606:4700:4700::1113@853#family.cloudflare-dns.com
+  forward-addr: 2606:4700:4700::1003@853#family.cloudflare-dns.com
